# Fitness_Waves

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
moran/: __init__.py  dataset.py  features.py  methods.py  oldcode.py  plots.py  runs.py
moran/modeling/: predict.py  train.py
notebooks/: GMM.ipynb  Heatmaps.ipynb
