[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moran"
version = "0.0.1"
description = "Simulation and analysis of evolutionary dynamics with trait-distribution oscillations."
authors = [
  { name = "Abolfazl Hamounian" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["moran"]
include = ["pyproject.toml", "moran/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["moran"]
force-sort-within-sections = true

